# whisper-web

./: README.md  package-lock.json  package.json  vite.config.ts
src/components/: AudioManager.tsx  AudioRecorder.tsx
src/components/modal/: Modal.tsx
src/hooks/: useWebSocketControl.ts
whisper-daemon/: Cargo.toml  README.md
whisper-daemon/src/: main.rs
