[package]
name = "whisper-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
global-hotkey = "0.4.2"
clipboard-win = "5.1.0"
windows-sys = { version = "0.52.0", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
winit = "0.29.10"
anyhow = "1.0.79"
tracing-subscriber = "0.3.19"
enigo = "0.1.3"
